# chat

./: nginx.conf
frontend/: .gitignore  gulpfile.coffee  index.html
frontend/src/: App.cjsx  AppActions.cjsx  AppStore.cjsx  ChannelActions.cjsx  ChannelForm.cjsx  ChannelForm.purs  ChannelList.cjsx  ChannelList.purs  ChannelListItem.cjsx  ChannelListItem.purs  ChannelStore.cjsx  ChatFlux.cjsx  MainView.cjsx  MessageActions.cjsx  MessageBox.cjsx  MessageBox.purs  MessageForm.cjsx  MessageForm.purs  MessageList.cjsx  MessageList.purs  MessageListItem.cjsx  MessageListItem.purs  MessageStore.cjsx  Moment.purs  SigninView.cjsx  SignupView.cjsx  channels.cjsx  flux.cjsx  main.cjsx  messages.cjsx  messages.jsx
server/: chat-server.cabal
server/Chat/: Application.hs  Combinators.hs  Persistence.hs  WebSocket.hs
server/Chat/Persistence/: Generated.hs
