name: chat-server
version: 0.1.0.0
license: MIT
-- license-file: LICENSE
author: Jakub Okoński
maintainer: jakub@okonski.org
build-type: Simple
cabal-version: >=1.10

library
  build-depends: base >=4.8 && <4.9, groundhog,
    groundhog-th,
    groundhog-postgresql,
    servant ==0.4.0,
    servant-server ==0.4.0,
    exceptions,
    wai,
    warp,
    mtl,
    text,
    either,
    unordered-containers,
    aeson,
    time,
    transformers,
    parsec,
    http-types,
    bytestring,
    bytestring-conversion,
    postgresql-simple,
    persistent,
    persistent-sqlite,
    persistent-postgresql,
    persistent-template,
    resource-pool,
    websockets,
    random,
    stm
  exposed-modules: Chat.Application,
                   Chat.Combinators,
                   Chat.Persistence,
                   Chat.WebSocket
  default-language: Haskell2010
  ghc-options:
    -Wall
    -fno-warn-orphans

executable server
  main-is: Server.hs
  hs-source-dirs: bin
  build-depends:
    base >=4.8 && <4.9,
    servant ==0.4.0,
    servant-server ==0.4.0,
    groundhog,
    groundhog-th,
    groundhog-postgresql,
    mtl,
    time,
    wai,
    warp,
    aeson,
    text,
    either,
    resource-pool,
    bytestring,
    bytestring-conversion,
    parsec,
    unordered-containers,
    chat-server,
    persistent,
    persistent-sqlite,
    persistent-postgresql,
    persistent-template,
    monad-logger,
    transformers,
    exceptions,
    stm
  default-language: Haskell2010
  ghc-options:
    -Wall
