name: chat-server
version: 0.1.0.0
license: MIT
-- license-file: LICENSE
author: Jakub Okoński
maintainer: jakub@okonski.org
build-type: Simple
cabal-version: >=1.10

executable server
  main-is: Server.hs
  hs-source-dirs: bin, .
  build-depends:
    base >=4.8 && <4.9,
    servant >=0.4.0,
    servant-server >=0.4.0,
    mtl,
    async,
    time,
    wai,
    warp,
    aeson,
    text,
    http-types,
    either,
    bytestring,
    bytestring-conversion,
    parsec,
    persistent,
    persistent-postgresql,
    persistent-template,
    random,
    monad-logger,
    transformers,
    exceptions,
    websockets,
    stm
  default-language: Haskell2010
  ghc-options:
    -Wall
